jdbctype 추가(ibatis)

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,13 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.ibatis</groupId>
+            <artifactId>ibatis-sqlmap</artifactId>
+            <version>3.0-beta-10</version>
+        </dependency>
+
+
 
     </dependencies>
 
