--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
             <version>3.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>1.10</version>
+        </dependency>
+
+
 
 
     </dependencies>
