--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>1.10</version>
         </dependency>
 
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.10</version>
+        </dependency>
 
 
 
